Fix width without scrollbar

--- a/src/app/features/pages/home/home.component.scss
+++ b/src/app/features/pages/home/home.component.scss
@@ -1,9 +1,5 @@
 @import "../../../../styles/main";
 
-h1 {
-  color: $color-white;
-}
-
 .vid-content {
   @include flex-center(column);
   width: 100%;
