--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: 100dvw;
+  // width: 100%;
   height: 100dvh;
 }
 
