--- a/src/styles/abstracts/_global.scss
+++ b/src/styles/abstracts/_global.scss
@@ -49,7 +49,7 @@ app-footer {
   border-top: 1px solid $color-white-70;
   display: flex;
   height: 20dvh;
-  width: 100dvw;
+  width: 100%;
   max-width: $view-desktop-max-width;
 }
 
