--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -14,7 +14,7 @@
 @mixin responsive-main($top-small, $top-large){
     position:absolute;
     top: $top-small;
-    width: 100dvw;
+    width: 100%;
     @media(min-width:600px){
         top: $top-large;
     }
